Прочитал Судьба шлёт знаки, или На …

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/kornelyk_1.jpg" title="Судьба шлёт знаки, или На …"></th>	
 <th><img src="jpg/biblia_seksa.jpg" title="Библия секса"></th>	
 <th><a id="a214" src="jpg/sistema_1.jpg" title="Система. Книга 1 (аудиокнига)"></a></th>
 <th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
@@ -985,14 +986,12 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="http://flibusta.is/a/215540"> Гордон Догерти</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/83097"> Гоулстон Марк</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/114804">Гриллс Беар</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/19156"> Грин Роберт</a></h4></th>
-<th colspan="1"><h4><a href="https://flibusta.is/a/187381">Гровер Тим</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/187381">Гровер Тим</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="http://flibusta.is/a/26344">  Грэм Бенджамин</a></h4></th>
 </tr><tr>
-<th><img src="jpg/assassins_10.jpg" title="Одиссея"></th>
-<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/mudak.jpg" title="Как разговаривать с мудаками"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a32" src="jpg/grills_1.jpg" title="Грязь, пот и слезы (аудиокнига)"></th>
@@ -1000,15 +999,9 @@
 <th><a id="a24" src="jpg/48_zakonov_vlasti.jpg" title="48 законов власти (аудиокнига)"></th> 
 <th><img src="jpg/master_igri.jpg" title="Мастер игры"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><img src="jpg/manifest.jpg" title="Манифест великого тренера как стать из хорошего спортсмена великим чемпионом"></th> </tr></table>
-
-
-
-<table><tr align="left"> 
-<th colspan="2"><h4><a href="http://flibusta.is/a/26344">Грэм Бенджамин</a></h4></th>
-</tr><tr>	
-<th><a id="a67" src="jpg/r_investor.jpg" title="Разумный инвестор (аудиокнига)"></th>  
+<th><img src="jpg/manifest.jpg" title="Манифест великого тренера как стать из хорошего спортсмена великим чемпионом"></th> 
 <th><img src="jpg/0.jpg"></th>
+<th><a id="a67" src="jpg/r_investor.jpg" title="Разумный инвестор (аудиокнига)"></th>  
 </tr></table>
 
 
@@ -1178,9 +1171,12 @@
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4>Дип Сэм</h4></th>
+<th colspan="2"><h4>									  Дип Сэм</h4></th>
+<th colspan="2"><h4><a href="http://flibusta.is/a/215540">Догерти Гордон</a></h4></th>
 </tr><tr> 
 <th><img src="jpg/pyt_k_yspehy.jpg" title="Сэм Дип и Лил Сесмен - Верный путь к успеху"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/assassins_10.jpg" title="Одиссея"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
@@ -1434,12 +1430,15 @@
 <table><tr align="left"> 
 <th colspan="4"><h4><a href="https://flibusta.is/a/14581"> Коллинз Сьюзен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/181229">Кононов Николай</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/243294">Корнелюк Алексей</a></h4></th>
 </tr><tr>  
 <th><img src="jpg/hunger_games_1.jpg" title="Голодные игры"></th>
 <th><img src="jpg/hunger_games_2.jpg" title="И вспыхнет пламя"></th>
 <th><img src="jpg/hunger_games_3.jpg" title="Сойка-пересмешница"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/vk.jpg" title="Код Дурова. Реальная история «ВКонтакте» и ее создателя"></th>
+<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/kornelyk_1.jpg" title="Судьба шлёт знаки, или На …"></th>	
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
