--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+		<th><img src="data/08.2025.jpg"></th>
 <th><img src="jpg/kornelyk_1.jpg" title="Судьба шлёт знаки, или На …"></th>	
 <th><img src="jpg/biblia_seksa.jpg" title="Библия секса"></th>	
 <th><a id="a214" src="jpg/sistema_1.jpg" title="Система. Книга 1 (аудиокнига)"></a></th>
