--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_35.jpg" title="[Эркюль Пуаро #35] Приключения рождественского пудинга (сборник): Приключение рождественского пудинга, Тайна испанского сундука, Неудачник, Черная смородина, Сон, Потерянный ключ"></th>
 		<th><img src="data/08.2025.jpg"></th>
 <th><img src="jpg/kornelyk_1.jpg" title="Судьба шлёт знаки, или На …"></th>	
 <th><img src="jpg/biblia_seksa.jpg" title="Библия секса"></th>	
@@ -1503,6 +1504,7 @@
 <th><img src="jpg/pyaro_32.jpg" title="[Эркюль Пуаро #32] Хикори Дикори"></th>
 <th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th> </tr>
 <tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
+<th><img src="jpg/pyaro_35.jpg" title="[Эркюль Пуаро #35] Приключения рождественского пудинга (сборник): Приключение рождественского пудинга, Тайна испанского сундука, Неудачник, Черная смородина, Сон, Потерянный ключ"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/pyaro_16let.jpg" title="[Эркюль Пуаро] Шестнадцать лет спустя"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
@@ -1510,8 +1512,8 @@
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
-<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
+<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
