Прочитал Фак Ю мани

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/fuck_you_money.jpg" title="Фак Ю мани"></th>
 <th><a id="a215" src="jpg/doroga.jpg" title="Дорога (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_35.jpg" title="[Эркюль Пуаро #35] Приключения рождественского пудинга (сборник): Приключение рождественского пудинга, Тайна испанского сундука, Неудачник, Черная смородина, Сон, Потерянный ключ"></th>
 		<th><img src="data/08.2025.jpg"></th>
@@ -654,31 +655,32 @@
 
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="http://flibusta.is/a/30541"> Аткинсон Уильям</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/239964">Бабайкин</a></h4></th>
+<th colspan="4"><h4><a href="http://flibusta.is/a/239964">Бабаев Анар [Бабайкин]</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/25885"> Баллард Джеймс</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/139762">Барден Фил</a></h4></th>
-<th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 </tr><tr>
 <th><img src="jpg/sila_misli.jpg" title="Закон привлечения и сила мысли"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
+<th><img src="jpg/fuck_you_money.jpg" title="Фак Ю мани"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/visotka.jpg" title="Высотка"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/vzlom_marketinga.jpg" title="Взлом маркетинга. Наука о том, почему мы покупаем"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="2"><h4><a href="http://flibusta.is/a/208731">Батырев Максим</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/149766">Белоусова Татьяна</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/32388"> Беннет Арнольд</a></h4></th>
 <th colspan="3"><h4><a href="http://flibusta.is/a/215022">Белинг Стив</a></h4></th>
-<th colspan="3"><h4><a href="http://flibusta.is/a/129573">Белфорт Джордан</a></h4></th>
 </tr><tr>
+<th><a id="a18" src="jpg/45_taty.jpg" title="45 татуировок менеджера (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>	
 <th><img src="jpg/etiket_1.jpg" title="Этикет. Полный свод правил светского и делового общения"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/24.jpg" title="Как жить 24 часа в сутки"></th>
@@ -686,18 +688,19 @@
 <th><img src="jpg/marvel_1.jpg" title="Мстители. Война Бесконечности. Путь героев"></th>
 <th><img src="jpg/marvel_2.jpg" title="Мстители. Финал. Путь героев"></th>
 <th><img src="jpg/0.jpg"></th>
-<th><a id="a33" src="jpg/volk_1.jpg" title="Волк с Уолл-стрит (аудиокнига)"></th> 
-<th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
+<th colspan="3"><h4><a href="http://flibusta.is/a/129573">Белфорт Джордан</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/239832">Берг Натали</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/1128">  Берджесс Энтони</a></h4></th>
 <th colspan="2"><h4><a href="http://flibusta.is/a/33434"> Берн Ронда</a></h4></th>
 </tr><tr>
+<th><a id="a33" src="jpg/volk_1.jpg" title="Волк с Уолл-стрит (аудиокнига)"></th> 
+<th><img src="jpg/metod_volka.jpg" title="Метод волка с Уолл-стрит. Откровения лучшего продавца в мире"></th>
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a104" src="jpg/amazon.jpg" title="Amazon. От офиса в гараже до $10 млрд годового дохода (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a99" src="jpg/z_apelsin.jpg" title="Заводной апельсин (аудиокнига)"></th>
