--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<tr> <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
 <th><a id="a216" src="jpg/metro_28.jpg" title="Право на силу (аудиокнига)"></a></th>
 <th><img src="jpg/fuck_you_money.jpg" title="Фак Ю мани"></th>
 <th><a id="a215" src="jpg/doroga.jpg" title="Дорога (аудиокнига)"></a></th>
@@ -962,10 +963,10 @@
 <th><a id="a108" src="jpg/metro_25.jpg" title="25. Царство крыс (аудиокнига)"></a></th>
 <th><img src="jpg/metro_26.jpg" title="26. Муос"></th>
 
-<th><a id="a216" src="jpg/metro_28.jpg" title="Право на силу (аудиокнига)"></a></th>
-
+<th><a id="a216" src="jpg/metro_28.jpg" title="28. Право на силу (аудиокнига)"></a></th>
 <th><a id="a167" src="jpg/metro_32.jpg" title="32. Дочь небесного духа (аудиокнига)"></a></th> </tr>
-<tr> <th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
+<tr> <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
+<th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
 <th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
 </tr></table>
