--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
-<tr> <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
+<th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
+<th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
 <th><a id="a216" src="jpg/metro_28.jpg" title="Право на силу (аудиокнига)"></a></th>
 <th><img src="jpg/fuck_you_money.jpg" title="Фак Ю мани"></th>
 <th><a id="a215" src="jpg/doroga.jpg" title="Дорога (аудиокнига)"></a></th>
@@ -1512,14 +1513,15 @@
 <th><img src="jpg/pyaro_33.jpg" title="[Эркюль Пуаро #33] Причуда мертвеца"></th> </tr>
 <tr> <th><a id="a198" src="jpg/pyaro_34.jpg" title="[Эркюль Пуаро #34] Кошка среди голубей (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_35.jpg" title="[Эркюль Пуаро #35] Приключения рождественского пудинга (сборник): Приключение рождественского пудинга, Тайна испанского сундука, Неудачник, Черная смородина, Сон, Потерянный ключ"></th>
+<th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
 <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
 <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
-<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
-<th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th> </tr>
+<tr> <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
 
