Прочитал Право на месть

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a218" src="jpg/metro_79.jpg" title="79. Право на месть (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
 <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
 <th><a id="a216" src="jpg/metro_28.jpg" title="Право на силу (аудиокнига)"></a></th>
@@ -967,6 +968,7 @@
 <th><a id="a216" src="jpg/metro_28.jpg" title="28. Право на силу (аудиокнига)"></a></th>
 <th><a id="a167" src="jpg/metro_32.jpg" title="32. Дочь небесного духа (аудиокнига)"></a></th> </tr>
 <tr> <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
+<th><a id="a218" src="jpg/metro_79.jpg" title="79. Право на месть (аудиокнига)"></a></th>
 <th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
 <th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
@@ -1459,7 +1461,7 @@
 </tr><tr>  
 <th><img src="jpg/alhimik.jpg" title="Алхимик"></th> 
 <th><img src="jpg/dnevnik_maga.jpg" title="Дневник мага"></th> 
-<th><img src="jpg/5_gora.jpg" title="Дневник мага"></th>
+<th><img src="jpg/5_gora.jpg" title="Пятая гора"></th>
 <th><img src="jpg/diavol.jpg" title="Дьявол и сеньорита Прим"></th>
 <th><img src="jpg/kniga_voina.jpg" title="Книга воина света"></th>
 <th><img src="jpg/11_minyt.jpg" title="Одиннадцать минут"></th>
