--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a219" src="jpg/bez_prava_na_oshibky.jpg.jpg" title="Без права на ошибку (аудиокнига)"></a></th>
 <th><a id="a218" src="jpg/metro_79.jpg" title="79. Право на месть (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
 <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
@@ -970,6 +971,7 @@
 <tr> <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
 <th><a id="a218" src="jpg/metro_79.jpg" title="79. Право на месть (аудиокнига)"></a></th>
 <th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
+<th><a id="a219" src="jpg/bez_prava_na_oshibky.jpg.jpg" title="Без права на ошибку (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
 <th><img src="jpg/myos_3.jpg" title="Муос. Падение"></th>
 </tr></table>
