--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a222" src="jpg/metro_89.jpg" title="89. Огонь и пепел (аудиокнига)"></a></th>
 <th><a id="a221" src="jpg/metro_86.jpg" title="86. Затерянный рай (аудиокнига)"></a></th>
 <th><a id="a220" src="jpg/metro_27.jpg" title="27. Наследие предков (аудиокнига)"></a></th>
 <th><img src="jpg/pyaro_37.jpg" title="[Эркюль Пуаро #37] Третья девушка"></th>
@@ -967,6 +968,7 @@
 <th><a id="a217" src="jpg/metro_34.jpg" title="34. Право на жизнь (аудиокнига)"></a></th>
 <th><a id="a218" src="jpg/metro_79.jpg" title="79. Право на месть (аудиокнига)"></a></th>
 <th><a id="a221" src="jpg/metro_86.jpg" title="86. Затерянный рай (аудиокнига)"></a></th>
+<th><a id="a222" src="jpg/metro_89.jpg" title="89. Огонь и пепел (аудиокнига)"></a></th>
 <th><a id="a61" src="jpg/metro_106.jpg" title="106. Харам Бурум (аудиокнига)"></a></th>
 <th><a id="a219" src="jpg/bez_prava_na_oshibky.jpg.jpg" title="Без права на ошибку (аудиокнига)"></a></th>
 <th><img src="jpg/myos_2.jpg" title="Муос. Чистилище"></th>
