--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/psihonomika.jpg" title="Психономика"></th>	
 <th><a id="a222" src="jpg/metro_89.jpg" title="89. Огонь и пепел (аудиокнига)"></a></th>
 <th><a id="a221" src="jpg/metro_86.jpg" title="86. Затерянный рай (аудиокнига)"></a></th>
 <th><a id="a220" src="jpg/metro_27.jpg" title="27. Наследие предков (аудиокнига)"></a></th>
@@ -672,7 +673,7 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/na_pensiy_v_35_let.jpg" title="На пенсию в 35 лет"></th>	
 <th><img src="jpg/fuck_you_money.jpg" title="Фак Ю мани"></th>
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/psihonomika.jpg" title="Психономика"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/visotka.jpg" title="Высотка"></th> 
 <th><img src="jpg/0.jpg"></th>
