--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
 <th><img src="jpg/ya_begy.jpg" title="Я бегу марафон"></th>			
 <th><img src="jpg/psihonomika.jpg" title="Психономика"></th>	
 <th><a id="a222" src="jpg/metro_89.jpg" title="89. Огонь и пепел (аудиокнига)"></a></th>
@@ -1523,13 +1524,14 @@
 <th><img src="jpg/pyaro_35.jpg" title="[Эркюль Пуаро #35] Приключения рождественского пудинга (сборник): Приключение рождественского пудинга, Тайна испанского сундука, Неудачник, Черная смородина, Сон, Потерянный ключ"></th>
 <th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
 <th><img src="jpg/pyaro_37.jpg" title="[Эркюль Пуаро #37] Третья девушка"></th>
+<th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
 <th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
-<th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
-<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th> </tr>
-<tr> <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
+<th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th> </tr>
+<tr> <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
+<th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
 
