--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+		<th><img src="data/09.2025.jpg"></th>
 <th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
 <th><img src="jpg/ya_begy.jpg" title="Я бегу марафон"></th>			
 <th><img src="jpg/psihonomika.jpg" title="Психономика"></th>	
