Прочитал Слоны умеют помнить

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
 <th><a id="a223" src="jpg/metro_29.jpg" title="29. Изнанка мира (аудиокнига)"></a></th>
 		<th><img src="data/09.2025.jpg"></th>
 <th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
@@ -1528,12 +1529,13 @@
 <th><img src="jpg/pyaro_36.jpg" title="[Эркюль Пуаро #36] Часы"></th>
 <th><img src="jpg/pyaro_37.jpg" title="[Эркюль Пуаро #37] Третья девушка"></th>
 <th><img src="jpg/pyaro_38.jpg" title="[Эркюль Пуаро #38] Вечеринка в Хэллоуин"></th>
+<th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
 <th><img src="jpg/pyaro_coffe.jpg" title="[Эркюль Пуаро] Черный кофе"></th>
 <th><img src="jpg/marpl_2.jpg" title="[Мисс Марпл #2] Труп в библиотеке"></th>
 <th><img src="jpg/marpl_4.jpg" title="[Мисс Марпл #4] Объявлено убийство"></th>
-<th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th>
-<th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th> </tr>
-<tr> <th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
+<th><img src="jpg/marpl_8.jpg" title="[Мисс Марпл #8] В 4.50 из Паддингтона"></th> </tr>
+<tr> <th><img src="jpg/beli_kon.jpg" title="Вилла Белый конь"></th>
+<th><img src="jpg/kristi_agata_01.jpg" title="Почему не позвали Уилби?"></th>
 <th><img src="jpg/10_niggers.jpg" title="Десять негритят"></th>
 <th><img src="jpg/kogda_bogi_smeytca.jpg" title="Когда боги смеются"></th> 
 </tr></table>
