Прочитал Граф Аверин

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>		
 <th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
 <th><a id="a223" src="jpg/metro_29.jpg" title="29. Изнанка мира (аудиокнига)"></a></th>
 		<th><img src="data/09.2025.jpg"></th>
@@ -1064,7 +1065,7 @@
 <th colspan="4"><h4><a href="https://flibusta.is/a/68842"> Гулд Стивен</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/32560"> Гэйл Боб</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/2202">  Дайдодзи Юдзан</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/218814">Дашкевич Виктор</a></h4></th>
 </tr><tr>
 <th><img src="jpg/jumper_0.jpg" title="Джампер"></th>
 <th><img src="jpg/jumper_1.jpg" title="Телепорт"></th>
@@ -1074,6 +1075,15 @@
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/bysido_1.jpg" title="Будосёсинсю"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
+<th><img src="jpg/0.jpg"></th>
+</tr></table>
+
+
+
+<table><tr align="left"> 
+<th colspan="2"><h4><a href="https://flibusta.is/a/165262">Дашко Дмитрий</a></h4></th>
+</tr><tr></tr>
 <th><img src="jpg/magic_sled.jpg" title="Тайны магического следствия"></th>
 <th><img src="jpg/0.jpg"></th>
 </tr></table>
