--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/terry_goodkind_19.jpg" title="Сердце из черного льда"></th>
 <th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3"></a></th>			
 <th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>		
 <th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
@@ -1066,6 +1067,7 @@
 <th><img src="jpg/terry_goodkind_16.jpg" title="Госпожа Смерть"></th>
 <th><img src="jpg/terry_goodkind_17.jpg" title="Саван вечности"></th>
 <th><img src="jpg/terry_goodkind_18.jpg" title="Осажденные камнем"></th>
+<th><img src="jpg/terry_goodkind_19.jpg" title="Сердце из черного льда"></th>
 <th><img src="jpg/terry_goodkind_03.jpg" title="Закон Девяток"></th>
 <th><img src="jpg/nebesnie_ludi.jpg" title="Небесные люди"></th> 
 </tr></table>
