--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><a id="a225" src="jpg/100_med_rasskazov.jpg" title="100 рассказов из истории медицины (аудиокнига)"></a></th>			
 <th><img src="jpg/terry_goodkind_19.jpg" title="Сердце из черного льда"></th>
-<th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3"></a></th>			
+<th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3 (аудиокнига)"></a></th>			
 <th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>		
 <th><img src="jpg/pyaro_39.jpg" title="[Эркюль Пуаро #39] Слоны умеют помнить"></th>
 <th><a id="a223" src="jpg/metro_29.jpg" title="29. Изнанка мира (аудиокнига)"></a></th>
@@ -2281,8 +2282,8 @@
 <th colspan="3"><h4><a href="https://flibusta.is/a/286751">Хорф Харальд и др.</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/58577"> Цацулин Павел</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/19614"> Цунэтомо Ямамото</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/6117">Чалдини Роберт</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/1884">Чан Джеки</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/6117">  Чалдини Роберт</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/1884">  Чан Джеки</a></h4></th>
 
 </tr><tr>  
 <th><a id="a118" src="jpg/atomic_heart.jpg" title="Atomic Heart. Предыстория Предприятия 3826 (аудиокнига)"></a></th>
@@ -2300,7 +2301,7 @@
 
 
 <table><tr align="left"> 
-<th colspan="3"><h4><a href="https://flibusta.is/a/1944">Чепмен Гэри</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/1944">  Чепмен Гэри</a></h4></th>
 <th colspan="6"><h4><a href="https://flibusta.is/a/105940">Черненко Алексей</a></h4></th>
 <th colspan="2"><h4><a href="https://flibusta.is/a/20781"> Чехов А.П.</a></h4></th>
 </tr><tr>  
@@ -2360,30 +2361,33 @@
 <table><tr align="left"> 
 <th colspan="2"><h4><a href="https://flibusta.is/a/34088"> Шелли Мэри</a></h4></th>
 <th colspan="3"><h4><a href="https://flibusta.is/a/16011"> Шефер Бодо</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/121029">Шмидт Эрик</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/239451">Шрайбер Флора</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<a href="https://flibusta.is/a/103027">Шульц Говард</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/217734">Шифрин Михаил</a></h4></th>
+<th colspan="3"><h4><a href="https://flibusta.is/a/121029">Шмидт Эрик</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/239451">Шрайбер Флора</a></h4></th>
 </tr><tr> 
 <th><a id="a136" src="jpg/frankishtein.jpg" title="Франкенштейн (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><a id="a69" src="jpg/mani.jpg" title="Мани, или Азбука денег (аудиокнига)"></a></th>
 <th><a id="a72" src="jpg/shefer_2.jpg" title="Законы победителей (аудиокнига)"></th>
 <th><img src="jpg/0.jpg"></th>
+<th><a id="a225" src="jpg/100_med_rasskazov.jpg" title="100 рассказов из истории медицины (аудиокнига)"></a></th>			
+<th><img src="jpg/0.jpg"></th>
 <th><a id="a47" src="jpg/google.jpg" title="Как работает Google (аудиокнига)"></a></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/sivilla.jpg" title="Сивилла"></th>
-<th><img src="jpg/0.jpg"></th>
-<th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th>
 </tr></table>
 
 
 
 <table><tr align="left"> 
-<th colspan="2"><h4><a href="https://flibusta.is/a/71362">Щеголев Илья</a></h4></th>	
-<th colspan="2"><h4><a href="https://flibusta.is/a/75550">Экер Харв</a></h4></th>
-<th colspan="3"><h4><a href="https://flibusta.is/a/51787">Экман Пол</a></h4></th>
-<th colspan="2"><h4><a href="https://flibusta.is/a/33690">Элбом Митч</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/103027">Шульц Говард</a></h4></th>
+<th colspan="2"><h4><a href="https://flibusta.is/a/71362"> Щеголев Илья</a></h4></th>	
+<th colspan="2"><h4><a href="https://flibusta.is/a/75550"> Экер Харв</a></h4></th>
+<th colspan="4"><h4><a href="https://flibusta.is/a/51787"> Экман Пол</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a href="https://flibusta.is/a/33690"> Элбом Митч</a></h4></th>
 </tr><tr>  
+<th><a id="a34" src="jpg/starbucks.jpg" title="Как чашка за чашкой строилась STARBUCKS (аудиокнига)"></a></th>
+<th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/tainiy_yazyk_tela.jpg" title="Илья Щеголев и Владимир Людвич - Тайный язык тела"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/dumai_kak_millioner.jpg" title="Думай как миллионер"></th>
@@ -2392,7 +2396,6 @@
 <th><img src="jpg/paul_ekman_2.jpg" title="Узнай лжеца по выражению лица"></th> 
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/morri.jpg" title="Вторники с Морри, или Величайший урок жизни"></th>
-<th><img src="jpg/0.jpg"></th>
 </tr></table>
 
 
