--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 
 	<div id="block"><h4>Последние прочитанные книги:</h4><table><tr>
+<th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>	
 <th><a id="a225" src="jpg/100_med_rasskazov.jpg" title="100 рассказов из истории медицины (аудиокнига)"></a></th>			
 <th><img src="jpg/terry_goodkind_19.jpg" title="Сердце из черного льда"></th>
 <th><a id="a224" src="jpg/ivan_chonkin.jpg" title="Жизнь и необычайные приключения солдата Ивана Чонкина. Книга 1-3 (аудиокнига)"></a></th>			
@@ -1090,7 +1091,7 @@
 <th><img src="jpg/bysido_1.jpg" title="Будосёсинсю"></th>
 <th><img src="jpg/0.jpg"></th>
 <th><img src="jpg/graf_averin_1.jpg" title="Граф Аверин"></th>	
-<th><img src="jpg/0.jpg"></th>
+<th><img src="jpg/graf_averin_2.jpg" title="Императорский Див"></th>
 </tr></table>
 
 
